syntax = "proto3";
option go_package = "../pb;pb";
import "user.proto";

service RelationService {
  rpc RelationAction (RelationActionRequest) returns (RelationActionResponse) {}
  rpc GetFollowList (GetFollowListRequest) returns (GetFollowListResponse) {}
  rpc GetFollowerList (GetFollowerListRequest) returns (GetFollowerListResponse) {}
  rpc GetFriendList (GetFriendListRequest) returns (GetFriendListResponse) {}
}

message RelationActionRequest {
  string token = 1;
  uint64 to_user_id = 2;
  int32 action_type = 3;
}

message RelationActionResponse {
  int32 status_code = 1;
  string status_msg = 2;
}

message GetFollowListRequest {
  uint64 user_id = 1;
  string token = 2;
}

message GetFollowListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated User user_list = 3;
}

message GetFollowerListRequest {
  uint64 user_id = 1;
  string token = 2;
}

message GetFollowerListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated User user_list = 3;
}

message GetFriendListRequest {
  uint64 user_id = 1;
  string token = 2;
}

message GetFriendListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated FriendUser user_list = 3;
}

message FriendUser {
  User user = 1;
  string message = 2;
  int32 msg_type = 3;
}